Don't fix search map on mobile

--- a/app/assets/stylesheets/_homestay_index.css.scss
+++ b/app/assets/stylesheets/_homestay_index.css.scss
@@ -45,6 +45,9 @@
       &.fixed-bottom {
         position: absolute;
       }
+      &.on-mobile {
+        max-height: 500px;
+      }
     }
   }
 }
